# Slyris

./: CMakeLists.txt  README.md
cmake/: test_features.cmake  unit_tests.cmake
example/: main.cpp
pooc/: CMakeLists.txt  IPlugin.hpp  SFMLPlugin.cpp  main.cpp
scripts/: jenkins-build.ps1  jenkins-build.sh
test/: CMakeLists.txt
test/test_example/: CMakeLists.txt  test_example.cpp
